# agent-halo

./: .gitignore  AGENTS.md  CREDITS.md  README.md  THIRD_PARTY_LICENSES.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/assets/mascots/: README.md
apps/desktop/public/mediapipe/: README.md
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: keep_awake.rs  lib.rs  main.rs  notification.rs  pet_window.rs  runtime_usage.rs
apps/desktop/src/styles/: foundation.css  movement.css  (+10 more)
apps/desktop/tests/: demo-accessibility.spec.ts  demo-activity-status.spec.ts  demo-completion-pet.spec.ts  demo-detection.spec.ts  demo-dismiss.spec.ts  demo-focus-stability.spec.ts  demo-mascot.spec.ts  demo-multi-session.spec.ts  demo-pet.spec.ts  demo-pomodoro.spec.ts  demo-runtime.spec.ts  demo-session-context.spec.ts  demo-setup.spec.ts  demo-soft-cube.spec.ts
apps/viewer/: index.mjs  package.json
docs/: architecture.md  event-protocol.md  movement-break.md  notchcode-parity.md  performance.md  pet-production.md  pet.md  pomodoro.md  presence-model.md  runtime-monitor.md
hooks/: agent-halo-hook.mjs
mods/: agent-halo.js
scripts/: benchmark-bridge.mjs  benchmark-session-model.mjs  check-performance-budget.mjs  install-desktop.mjs  install-mod.mjs
tests/: hook-integration.test.mjs
(+84 files in other folders)
