[package]
name = "agent-halo-desktop"
version = "0.1.0"
description = "Agent Halo desktop presence overlay"
authors = ["Mahiro"]
edition = "2021"

[lib]
name = "agent_halo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
time = { version = "0.3", features = ["formatting", "parsing"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSScreen", "NSGraphics"] }
objc2-foundation = { version = "0.3.2", features = ["NSGeometry"] }
